@@ -4,12 +4,13 @@ plugins {
 }
 
 repositories {
+    mavenLocal()
     mavenCentral()
 }
 
 dependencies {
-    api 'com.epam.jdi:jdi-light-html:+'
-    testImplementation 'io.qameta.allure:allure-testng:2.23.0'
+    api 'com.epam.jdi:jdi-light-html:1.6.2'
+    testImplementation 'io.qameta.allure:allure-testng:2.29.1'
     testImplementation 'org.testng:testng:7.8.0'
     testImplementation 'io.netty:netty-transport-native-epoll:4.1.78.Final'
     testImplementation 'io.netty:netty-transport-native-kqueue:4.1.78.Final'
@@ -48,4 +49,15 @@ tasks.withType(Javadoc) {
 
 tasks.named('test') {
     useTestNG()
+}
+
+tasks.withType(Test) {
+    jvmArgs = [
+        '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.util=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.io=ALL-UNNAMED',
+        '-XX:-OmitStackTraceInFastThrow'
+    ]
+    outputs.upToDateWhen { false }
 }
